include some additional information on the web interface

--- a/src/storage_server/templates/base.html
+++ b/src/storage_server/templates/base.html
@@ -13,7 +13,7 @@
         <li style="border-right: 1px solid #bbb;"><a href="/client/status">Status</a></li>
         <li><span>Provider:</span></li>
         <li><a href="/provider/gen_token">Gen. Token</a></li>
-        <li><a href="/provider/key_retrieval?totalOTs=10">Batch Store</a></li>
+        <li><a href="/provider/store_interface">Batch Store</a></li>
         <li><a href="/provider/status">Status</a></li>
     </ul>
 </nav>
